fixed checkbox alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -741,8 +741,8 @@ body {
   width: 16px;
   height: 15px;
   padding: 2px 0.5px;
-  /* margin-right: 7px; */
-  vertical-align: middle;
+  margin-right: 7px;
+  /* vertical-align: middle; */
   fill: var(--background-light);
   border: 2px solid var(--main-color);
   border-radius: 2px;
